tests/golden/type_errors/record_pattern_nullable_missing_nil.cd
struct Person { name: string }
let person: Person? = nil;
print match person {
  Person { name: _ } => "person",
};
