tests/golden/type_errors/record_pattern_nullable_missing_nil.err
Type error at 3:7: non-exhaustive match: missing nil
  print match person {
        ^
